<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/fondo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/fondo"
        android:scaleType="centerCrop"
        android:contentDescription="@string/todo"
        android:windowSoftInputMode="adjustNothing"
        />


    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        app:srcCompat="@drawable/logo"
        android:scaleType="fitCenter"
        android:contentDescription="@string/todo" />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/logo"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="266dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rectangulo_transparente"
            android:orientation="vertical"
            >


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:text="@string/inicio_de_sesi_n"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/accede_a_tu_cuenta"
                android:textColor="@color/white"
                android:textSize="12sp">

            </TextView>

            <EditText
                android:textColor="@color/negro"
                android:id="@+id/correo"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/blancoredondo"
                android:drawableStart="@drawable/ic_supervised_user_circle"
                android:hint="@string/email"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textSize="14sp"
                android:autofillHints="" />

            <EditText
                android:textColor="@color/negro"
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/blancoredondo"
                android:drawableStart="@drawable/ic_lock_outline"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textSize="14sp"
                android:autofillHints="" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="80dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btnredondodorado"
                android:hint="@string/aceptar"
                android:text="@string/aceptar"
                android:textColor="@color/white" />

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@id/txtregistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnnull"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:hint="@string/registrarse"
        android:text="@string/no_tienes_una_cuenta"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/creditos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtregistrar"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="70dp"
        android:text="@string/creado_por_marc"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#DAAD20" />

    <Button
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/scrollView"
        android:id="@+id/btnnull"
        android:layout_marginStart="70dp"
        android:layout_marginTop="-162dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/btnredondodorado"
        android:hint="@string/registrarse"
        android:text="@string/registrarse"
        android:textColor="@color/white" />

</RelativeLayout>

